# Model-Viewer

./: .gitignore  .gitmodules  Build.bat  CMakeLists.txt  GenerateProject.bat  README.md
resources/fbx/: box_scene.fbx  box_scene3.fbx  cube.fbx  cylinder.fbx  imgui.ini  pCube.fbx  plane.fbx  skull.fbx  skull_highrez.fbx  sphere.fbx  teapot.fbx  torus.fbx
resources/shaders/: background.glsl  basic.glsl  brdf.glsl  color.glsl  cubemap.glsl  depth.glsl  equirectangularMap.glsl  irradiance.glsl  lambert.glsl  light.glsl  normalMap.glsl  pbr.glsl  post.glsl  prefilter.glsl  shadowDepth.glsl  shadows.glsl  shadowsBackup.glsl  simpleDepthShader.glsl  uber.glsl
resources/shaders/debug/: color.glsl  depth.glsl  shadows.glsl
src/: Camera.h  Debugging.cpp  Debugging.h  GLfunctions.h  IndexBuffer.cpp  IndexBuffer.h  Log.cpp  Log.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Render.cpp  Render.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  _main.cpp  main.cpp
